separed getIssueList and getIssue on API
